FE_221111_notification : 알림 클릭시 이동 구현, API 연동 필요 + 꾸미기 해야함
Former-commit-id: 688e43b99476a905e43b34142220274a98a7b208

--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -77,7 +77,8 @@
         <action
             android:id="@+id/action_recordBoardFragment2_to_recordQnaDetailFragment"
             app:destination="@id/recordQnaDetailFragment" />
-        <argument android:name="id"
+        <argument
+            android:name="id"
             app:argType="long" />
         <deepLink
             android:id="@+id/deepLink"
@@ -86,7 +87,14 @@
     <fragment
         android:id="@+id/recordQnaDetailFragment"
         android:name="com.ssafy.zip.android.RecordQnaDetailFragment"
-        android:label="RecordQnaDetailFragment" />
+        android:label="RecordQnaDetailFragment">
+        <deepLink
+            android:id="@+id/deepLink3"
+            app:uri="myapp://zip.com/qna/{id}" />
+        <argument
+            android:name="id"
+            app:argType="long" />
+    </fragment>
     <fragment
         android:id="@+id/recordAlbumPicturesFragment2"
         android:name="com.ssafy.zip.android.RecordAlbumPhotoFragment"
@@ -182,5 +190,6 @@
     <fragment
         android:id="@+id/recordQnaCreateFragment"
         android:name="com.ssafy.zip.android.RecordQnaCreateFragment"
-        android:label="RecordQnaCreateFragment" />
+        android:label="RecordQnaCreateFragment">
+    </fragment>
 </navigation>
