--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -11,6 +11,7 @@
     </data>
 
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/qwwer"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fillViewport="true">
