FE_221111_calendar: 한국 시간 설정, 캘린더 일정 리스트 레이아웃 수정
Former-commit-id: 803df636afa72e38081024ae6b2a615984759318

--- a/android/app/src/main/res/layout/fragment_calendar.xml
+++ b/android/app/src/main/res/layout/fragment_calendar.xml
@@ -61,7 +61,7 @@
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/calendar_recycler_view"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@id/day_text"
             tools:ignore="MissingConstraints"
             tools:listitem="@layout/calendar_item" />
