FE_221111_notification : 알림 클릭시 이동 구현 완료 및 홈 조금 수정
Former-commit-id: 848d5d942c6c727b7ae1a8ea3a04616ba0f5c25b

--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -21,6 +21,9 @@
         <action
             android:id="@+id/action_homeFragment_to_recordQnaDetailFragment"
             app:destination="@id/recordQnaDetailFragment" />
+        <deepLink
+            android:id="@+id/deepLink2"
+            app:uri="myapp://zip.com/home" />
     </fragment>
     <fragment
         android:id="@+id/recordFragment"
@@ -48,12 +51,19 @@
         <action
             android:id="@+id/action_recordFragment_to_recordLetterCreateFragment"
             app:destination="@id/recordLetterCreateFragment" />
+        <deepLink
+            android:id="@+id/deepLink5"
+            app:uri="myapp://zip.com/board" />
     </fragment>
     <fragment
         android:id="@+id/calendarFragment"
         android:name="com.ssafy.zip.android.CalendarFragment"
         android:label="fragment_calendar"
-        tools:layout="@layout/fragment_calendar" />
+        tools:layout="@layout/fragment_calendar">
+        <deepLink
+            android:id="@+id/deepLink4"
+            app:uri="myapp://zip.com/calendar" />
+    </fragment>
     <fragment
         android:id="@+id/notificationFragment"
         android:name="com.ssafy.zip.android.NotificationFragment"
