--- a/android/app/src/main/res/drawable/home_button.xml
+++ b/android/app/src/main/res/drawable/home_button.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <solid android:color="@color/lightgray"></solid>
+    <solid android:color="@color/white"></solid>
     <corners android:radius="20dp"></corners>
 </shape>
