--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -74,7 +74,9 @@
                         android:layout_marginStart="4dp"
                         android:text="@string/room_code_name"
                         android:textColor="@color/black"
+                        android:textStyle="bold"
                         android:textSize="15sp"
+                        android:alpha="1"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@id/family_code"
                         app:layout_constraintStart_toStartOf="parent"
@@ -89,6 +91,8 @@
                         android:layout_marginStart="4dp"
                         android:textColor="@color/black"
                         android:textSize="15sp"
+                        android:alpha="1"
+
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/text"
                         app:layout_constraintTop_toTopOf="parent"
@@ -148,6 +152,7 @@
                         android:text="@string/point_name"
                         android:textColor="@color/black"
                         android:textSize="15sp"
+                        android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent">
