FE_221113_fix : 수정화면 진행중
Former-commit-id: ffeeb8e3d0ed43e92c21476dd2bd77dd79d3f9a8

--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -24,9 +24,6 @@
         <deepLink
             android:id="@+id/deepLink2"
             app:uri="myapp://zip.com/home" />
-        <action
-            android:id="@+id/action_homeFragment_to_modifyFragment"
-            app:destination="@id/modifyFragment" />
     </fragment>
     <fragment
         android:id="@+id/recordFragment"
@@ -217,4 +214,6 @@
             android:id="@+id/action_modifyFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
     </fragment>
+    <action
+        android:id="@+id/action_to_modify" app:destination="@id/modifyFragment"/>
 </navigation>
