FE_221114_fix : 프로필 화면 수정 완료
Former-commit-id: c22c27c7010684f10f0839ce012411ff0a60b9cb

--- a/android/app/src/main/res/layout/board_item.xml
+++ b/android/app/src/main/res/layout/board_item.xml
@@ -23,7 +23,7 @@
                 android:id="@+id/profileImage"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
-
+                android:background="@color/darkgray"
                 android:adjustViewBounds="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/userimage1"
