--- a/android/app/src/main/res/layout/comment_item.xml
+++ b/android/app/src/main/res/layout/comment_item.xml
@@ -24,6 +24,7 @@
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="4dp"
+            android:background="@color/darkgray"
             android:adjustViewBounds="true"
             android:scaleType="centerCrop"
             app:layout_constraintStart_toStartOf="parent"
