--- a/android/app/src/main/res/layout/fragment_dialog.xml
+++ b/android/app/src/main/res/layout/fragment_dialog.xml
@@ -28,10 +28,11 @@
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/dialog_image"
-        android:layout_width="140dp"
-        android:layout_height="140dp"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         android:layout_marginHorizontal="100dp"
-        app:civ_border_color="@color/grey"
+        app:civ_circle_background_color="@color/darkgray"
+        app:civ_border_color="@color/lightgray"
         app:civ_border_width="1dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -43,7 +44,7 @@
         android:id="@+id/dialog_left_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="24dp"
         android:layout_marginRight="8dp"
         android:gravity="center"
         android:text="@string/dialog_name"
@@ -56,7 +57,7 @@
         android:id="@+id/dialog_right_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="24dp"
         android:gravity="center"
         android:textColor="@color/black"
         app:layout_constraintLeft_toRightOf="@id/guideline"
