--- a/android/app/src/main/res/layout/fragment_record_board_detail.xml
+++ b/android/app/src/main/res/layout/fragment_record_board_detail.xml
@@ -71,6 +71,7 @@
                             android:layout_height="40dp"
                             android:adjustViewBounds="true"
                             android:scaleType="centerCrop"
+                            android:background="@color/darkgray"
                             app:layout_constraintBottom_toBottomOf="@id/profileContanier"
                             app:layout_constraintStart_toStartOf="parent"
                             app:layout_constraintTop_toTopOf="@id/profileContanier"
