--- a/android/app/src/main/res/layout/fragment_record_letter_detail.xml
+++ b/android/app/src/main/res/layout/fragment_record_letter_detail.xml
@@ -39,6 +39,7 @@
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
             android:scaleType="centerCrop"
+            android:background="@color/darkgray"
             app:shapeAppearanceOverlay="@style/circleImageView"
             android:adjustViewBounds="true"
             app:layout_constraintBottom_toBottomOf="@id/profileContanier"
