--- a/android/app/src/main/res/layout/home_item.xml
+++ b/android/app/src/main/res/layout/home_item.xml
@@ -9,6 +9,7 @@
         android:id="@+id/home_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:civ_circle_background_color="@color/darkgray"
         app:civ_border_color="@color/lightgray"
         app:civ_border_width="1dp"
         app:layout_constraintTop_toTopOf="parent"
