--- a/android/app/src/main/res/layout/qna_comment_item.xml
+++ b/android/app/src/main/res/layout/qna_comment_item.xml
@@ -25,6 +25,7 @@
             android:layout_height="40dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
+            android:background="@color/darkgray"
             android:scaleType="centerCrop"
             app:shapeAppearanceOverlay="@style/circleImageView"
             android:adjustViewBounds="true"
