--- a/android/app/src/main/res/layout/fragment_dialog.xml
+++ b/android/app/src/main/res/layout/fragment_dialog.xml
@@ -31,6 +31,7 @@
         android:layout_width="140dp"
         android:layout_height="140dp"
         android:layout_marginHorizontal="100dp"
+        app:civ_circle_background_color="@color/darkgray"
         app:civ_border_color="@color/grey"
         app:civ_border_width="1dp"
         app:layout_constraintStart_toStartOf="parent"
