--- a/android/app/src/main/res/layout/fragment_calendar.xml
+++ b/android/app/src/main/res/layout/fragment_calendar.xml
@@ -11,9 +11,9 @@
     </data>
 
 
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="match_parent"
         android:orientation="vertical"
         tools:context=".CalendarFragment"
         tools:ignore="MissingClass">
@@ -25,8 +25,6 @@
             android:layout_marginStart="15dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="15dp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
             app:mcv_selectionColor="#6200EE" />
 
         <TextView
@@ -38,7 +36,7 @@
             android:layout_marginEnd="25dp"
             android:textColor="@color/black"
             android:textSize="15sp"
-            app:layout_constraintTop_toBottomOf="@id/calendarView" />
+            android:layout_below="@id/calendarView" />
 
         <TextView
             android:id="@+id/endLayout"
@@ -49,14 +47,14 @@
             android:layout_marginEnd="15dp"
             android:background="@drawable/layout_bottom"
             android:textColor="@color/black"
-            app:layout_constraintTop_toBottomOf="@id/day_text"
+            android:layout_below="@id/day_text"
             tools:ignore="DuplicateIds" />
 
         <androidx.core.widget.NestedScrollView
             android:layout_width="match_parent"
-            android:layout_height="270dp"
+            android:layout_height="match_parent"
             android:fillViewport="true"
-            app:layout_constraintTop_toBottomOf="@id/endLayout">
+            android:layout_below="@id/endLayout" >
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -81,13 +79,13 @@
             android:layout_gravity="bottom|end"
             android:layout_marginRight="16dp"
             android:layout_marginBottom="20dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
             app:srcCompat="@drawable/ic_baseline_add_24"
             app:tint="@color/white"
-            tools:ignore="MissingConstraints" />
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
+             />
 
 
-    </androidx.constraintlayout.widget.ConstraintLayout>
+    </RelativeLayout>
 
 </layout>
