--- a/android/app/src/main/res/layout/fragment_modify.xml
+++ b/android/app/src/main/res/layout/fragment_modify.xml
@@ -7,13 +7,13 @@
     tools:context=".ModifyFragment">
 
     <com.google.android.material.appbar.AppBarLayout
-        android:id="@+id/notification_detail_layout"
+        android:id="@+id/profile_modify_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
-            android:id="@+id/notification_detail_appbar"
+            android:id="@+id/profile_modify_appbar"
             style="@style/Widget.MaterialComponents.Toolbar.Surface"
             android:layout_width="match_parent"
             android:layout_height="48dp"
@@ -31,7 +31,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginStart="15dp"
         android:layout_marginEnd="15dp"
-        app:layout_constraintTop_toBottomOf="@+id/notification_detail_layout"
+        app:layout_constraintTop_toBottomOf="@+id/profile_modify_layout"
         tools:ignore="MissingConstraints">
 
     <FrameLayout
@@ -40,7 +40,7 @@
         android:layout_height="100dp"
         android:orientation="vertical"
         android:layout_marginBottom="15dp"
-        app:layout_constraintBottom_toTopOf="@+id/label_email"
+        app:layout_constraintBottom_toTopOf="@+id/modify_name"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintVertical_bias="1.0">
@@ -51,81 +51,108 @@
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
             android:src="@drawable/profile640"
+            app:civ_circle_background_color="@color/darkgray"
             app:civ_border_color="@color/grey"
             app:civ_border_width="1dp" />
-
-        <de.hdodenhof.circleimageview.CircleImageView
-            android:id="@+id/iv_camera"
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="bottom|right"
-            android:src="@drawable/ic_baseline_camera_alt_24" />
     </FrameLayout>
-
-
-    <TextView
-        android:id="@+id/label_email"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/email"
-        android:textColor="@color/black"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toTopOf="@+id/signup_email"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="@id/frame_profile" />
-
-    <com.google.android.material.textfield.TextInputLayout
-        android:id="@+id/signup_email"
-        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        app:errorIconDrawable="@null"
-        app:layout_constraintEnd_toStartOf="@id/btn_duplicate"
-        app:layout_constraintHorizontal_weight="3"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/label_email">
-
-        <com.google.android.material.textfield.TextInputEditText
-            android:id="@+id/edit_email"
+        <TextView
+            android:id="@id/modify_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="8dp"
-            android:paddingStart="8dp"
-            android:paddingEnd="8dp"
-            android:singleLine="true" />
+            android:layout_gravity="center_horizontal"
+            android:layout_marginTop="8dp"
+            android:textColor="@color/black"
+            android:textStyle="bold"
+            android:text="123456"
+            android:textAlignment="center"
+            app:layout_constraintTop_toBottomOf="@id/frame_profile"/>
 
-    </com.google.android.material.textfield.TextInputLayout>
+        <TextView
+            android:id="@+id/label_familyName"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/modify_familyName"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/modify_name" />
 
-    <Button
-        android:id="@+id/btn_duplicate"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="7dp"
-        android:layout_marginEnd="7dp"
-        android:text="@string/duplicate_check"
-        android:textSize="13dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_weight="1"
-        app:layout_constraintStart_toEndOf="@id/signup_email"
-        app:layout_constraintTop_toTopOf="@id/signup_email" />
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/modify_familyName"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:errorIconDrawable="@null"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/label_familyName">
 
 
-    <TextView
-        android:id="@+id/label_password"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="8dp"
-        android:text="@string/password"
-        android:textColor="@color/black"
-        android:textSize="15sp"
-        android:textStyle="bold"
-        app:layout_constraintStart_toStartOf="@id/signup_email"
-        app:layout_constraintTop_toBottomOf="@id/signup_email" />
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_familyName"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:singleLine="true" />
+        </com.google.android.material.textfield.TextInputLayout>
 
+        <TextView
+            android:id="@+id/label_nickname"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="8dp"
+            android:text="@string/nickname"
+            android:textColor="@color/black"
+            android:textSize="15sp"
+            android:textStyle="bold"
+            app:errorIconDrawable="@null"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/modify_familyName" />
+
+        <com.google.android.material.textfield.TextInputLayout
+            android:id="@+id/modify_nickname"
+            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginEnd="8dp"
+            app:errorIconDrawable="@null"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="@id/label_nickname"
+            app:layout_constraintTop_toBottomOf="@id/label_nickname">
+
+
+            <com.google.android.material.textfield.TextInputEditText
+                android:id="@+id/edit_nickname"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:padding="8dp"
+                android:paddingStart="8dp"
+                android:paddingEnd="8dp"
+                android:singleLine="true" />
+        </com.google.android.material.textfield.TextInputLayout>
+
+        <Button
+            android:id="@+id/btn_modify"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginEnd="8dp"
+            android:text="@string/modify_btn"
+            android:textSize="16dp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/modify_nickname" />
 </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
