FE_221114_character : 캐릭터 선택 화면 구현 중
Former-commit-id: 5708c4152958750149caec01519ea46c6884eb6e

--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -142,6 +142,9 @@
         <action
             android:id="@+id/action_signupFragment_to_signUpCompleteFragment"
             app:destination="@id/signUpCompleteFragment" />
+        <action
+            android:id="@+id/action_signupFragment_to_characterFragment"
+            app:destination="@id/characterFragment" />
     </fragment>
     <fragment
         android:id="@+id/signUpCompleteFragment"
@@ -202,4 +205,8 @@
         android:name="com.ssafy.zip.android.RecordQnaCreateFragment"
         android:label="RecordQnaCreateFragment">
     </fragment>
+    <fragment
+        android:id="@+id/characterFragment"
+        android:name="com.ssafy.zip.android.CharacterFragment"
+        android:label="CharacterFragment" />
 </navigation>
