--- a/android/app/src/main/res/layout/fragment_character.xml
+++ b/android/app/src/main/res/layout/fragment_character.xml
@@ -36,6 +36,9 @@
             app:layout_behavior="@string/appbar_scrolling_view_behavior"
             android:layout_margin="1dp"
             >
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/character_recycler_view"
             android:layout_width="match_parent"
@@ -43,6 +46,21 @@
             android:layout_marginHorizontal="10dp"
             app:layoutManager="GridLayoutManager"
             tools:listitem="@layout/character_item" />
+            <Button
+                android:id="@+id/btn_modify"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="15dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/modify_btn"
+                android:textSize="16dp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/character_recycler_view" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.core.widget.NestedScrollView>
         </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
