--- a/android/app/src/main/res/layout/fragment_signup.xml
+++ b/android/app/src/main/res/layout/fragment_signup.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     tools:context=".SignupFragment">
 
     <androidx.appcompat.widget.Toolbar
@@ -45,8 +45,8 @@
 
         <FrameLayout
             android:id="@+id/frame_profile"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
+            android:layout_width="120dp"
+            android:layout_height="120dp"
             android:orientation="vertical"
             android:layout_marginBottom="15dp"
             app:layout_constraintBottom_toTopOf="@+id/label_email"
@@ -56,12 +56,13 @@
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/profile"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
+                android:layout_width="120dp"
+                android:layout_height="120dp"
                 android:layout_gravity="center_horizontal"
                 android:src="@drawable/profile640"
                 app:civ_border_color="@color/grey"
-                app:civ_border_width="1dp" />
+                app:civ_border_width="1dp"
+                app:civ_circle_background_color="@color/darkgray"/>
 
             <de.hdodenhof.circleimageview.CircleImageView
                 android:id="@+id/iv_camera"
