--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -46,9 +46,6 @@
             android:id="@+id/action_recordFragment_to_recordBoardCreateFragment"
             app:destination="@id/recordBoardCreateFragment" />
         <action
-            android:id="@+id/action_recordFragment_to_recordQnaCreateFragment"
-            app:destination="@id/recordQnaCreateFragment" />
-        <action
             android:id="@+id/action_recordFragment_to_recordLetterCreateFragment"
             app:destination="@id/recordLetterCreateFragment" />
         <deepLink
@@ -204,14 +201,20 @@
             app:popUpToInclusive="true" />
     </fragment>
     <fragment
-        android:id="@+id/recordQnaCreateFragment"
-        android:name="com.ssafy.zip.android.RecordQnaCreateFragment"
-        android:label="RecordQnaCreateFragment">
-    </fragment>
-    <fragment
         android:id="@+id/characterFragment"
         android:name="com.ssafy.zip.android.CharacterFragment"
-        android:label="CharacterFragment" />
+        android:label="CharacterFragment" >
+        <action
+            android:id="@+id/action_characterFragment_to_signupFragment"
+            app:destination="@id/signupFragment"
+            app:popUpTo="@id/signupFragment"
+            app:popUpToInclusive="true"/>
+        <argument
+            android:name="character"
+            app:argType="com.ssafy.zip.android.data.Character"
+            app:nullable="true"
+            android:defaultValue="@null" />
+    </fragment>
     <fragment
         android:id="@+id/modifyFragment"
         android:name="com.ssafy.zip.android.ModifyFragment"
