FE_221114_character : 프로필 수정 캐릭터 선택 기능 구현 완료, 캐릭터 선택 안했을 시 dialog 띄우도록 수정 완료
Former-commit-id: a5ff2bf82d4f5b7d08afeb026ee19f1392e4ce0e

--- a/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
+++ b/android/app/src/main/res/navigation/bottom_bar_nav_graph.xml
@@ -214,6 +214,9 @@
             app:argType="com.ssafy.zip.android.data.Character"
             app:nullable="true"
             android:defaultValue="@null" />
+        <action
+            android:id="@+id/action_characterFragment_to_modifyFragment"
+            app:destination="@id/modifyFragment" />
     </fragment>
     <fragment
         android:id="@+id/modifyFragment"
@@ -223,6 +226,9 @@
         <action
             android:id="@+id/action_modifyFragment_to_homeFragment"
             app:destination="@id/homeFragment" />
+        <action
+            android:id="@+id/action_modifyFragment_to_characterFragment"
+            app:destination="@id/characterFragment" />
     </fragment>
     <action
         android:id="@+id/action_to_modify" app:destination="@id/modifyFragment"/>
