FE_221116_home : home UI 최종 수정 완료
Former-commit-id: f4c5e0776b492bec70fbeb79c826c81e43159f12

--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -38,8 +38,7 @@
                 android:id="@+id/familyName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
-                android:layout_marginBottom="10dp"
+                android:paddingVertical="10dp"
                 android:fontFamily="@font/one_mobile_pop"
                 android:gravity="center_horizontal"
                 android:text="@{viewmodel.familyData.familyName}"
@@ -50,7 +49,6 @@
                 android:id="@+id/home_house"
                 android:layout_width="match_parent"
                 android:layout_height="300dp"
-                android:layout_marginTop="10dp"
                 android:background="@drawable/house"
                 app:layout_constraintTop_toBottomOf="@+id/familyName">
 
@@ -72,11 +70,11 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="4dp"
+                        android:alpha="1"
                         android:text="@string/room_code_name"
                         android:textColor="@color/black"
-                        android:textStyle="bold"
                         android:textSize="15sp"
-                        android:alpha="1"
+                        android:textStyle="bold"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@id/family_code"
                         app:layout_constraintStart_toStartOf="parent"
@@ -89,9 +87,9 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginStart="4dp"
+                        android:alpha="1"
                         android:textColor="@color/black"
                         android:textSize="15sp"
-                        android:alpha="1"
 
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toEndOf="@id/text"
@@ -122,8 +120,8 @@
                     android:id="@+id/family_point_container"
                     android:layout_width="0dp"
                     android:layout_height="30dp"
-                    android:layout_marginTop="4dp"
-                    android:layout_marginEnd="4dp"
+                    android:layout_marginTop="6dp"
+                    android:layout_marginEnd="6dp"
                     android:background="@drawable/home_button"
                     android:orientation="horizontal"
                     android:padding="2dp"
@@ -135,9 +133,9 @@
                         android:id="@+id/mission_point"
                         android:layout_width="20dp"
                         android:layout_height="20dp"
-                        android:layout_marginStart="4dp"
                         android:layout_marginTop="2dp"
-                        android:layout_marginEnd="4dp"
+                        android:layout_marginEnd="2dp"
+                        android:layout_marginBottom="2dp"
                         android:elevation="15dp"
                         android:outlineProvider="none"
                         android:src="@drawable/point"
@@ -219,7 +217,7 @@
                     android:layout_marginHorizontal="8dp"
                     android:layout_marginTop="10dp"
                     android:layout_marginBottom="20dp"
-                    android:background="@drawable/card_background"
+                    android:background="@drawable/card_main_background"
                     android:elevation="5dp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -236,7 +234,7 @@
                     android:outlineProvider="none"
                     android:paddingVertical="15dp"
                     android:text="@string/mission_top"
-                    android:textColor="@color/black"
+                    android:textColor="@color/white"
                     android:textSize="20sp"
                     app:layout_constraintBottom_toTopOf="@id/mission1"
                     app:layout_constraintEnd_toEndOf="@id/home_mission"
