--- a/android/app/src/main/res/layout/home_item.xml
+++ b/android/app/src/main/res/layout/home_item.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="85dp"
-    android:layout_margin="8dp">
+    android:layout_margin="5dp">
 
     <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/home_image"
@@ -20,7 +20,8 @@
         android:id="@id/home_nickname"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="4dp"
+        android:layout_marginTop="2dp"
+        android:fontFamily="@font/one_mobile_pop"
         android:textColor="@color/black"
         android:textAlignment="center"
         app:layout_constraintStart_toStartOf="parent"
