--- a/android/app/src/main/res/layout/fragment_record_qna_detail.xml
+++ b/android/app/src/main/res/layout/fragment_record_qna_detail.xml
@@ -30,7 +30,7 @@
                 android:minHeight="48dp"
                 app:maxButtonHeight="48dp"
                 app:titleCentered="true"
-                app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />
+                app:titleTextAppearance="@style/toolbar_title" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.core.widget.NestedScrollView
