--- a/android/app/src/main/res/layout/fragment_notification.xml
+++ b/android/app/src/main/res/layout/fragment_notification.xml
@@ -28,7 +28,7 @@
                 android:text="알림"
                 app:maxButtonHeight="48dp"
                 app:titleCentered="true"
-                app:titleTextAppearance="@style/TextAppearance.AppCompat.Medium" />
+                app:titleTextAppearance="@style/toolbar_title" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.recyclerview.widget.RecyclerView
