--- a/android/app/src/main/res/layout/fragment_record_board.xml
+++ b/android/app/src/main/res/layout/fragment_record_board.xml
@@ -31,14 +31,15 @@
                     android:layout_height="match_parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
+                    android:paddingHorizontal="10dp"
                     android:orientation="horizontal">
 
                     <RadioButton
                         android:id="@+id/allButton"
-                        android:layout_width="30dp"
+                        android:layout_width="20dp"
                         android:layout_height="match_parent"
                         android:layout_marginVertical="10dp"
-                        android:layout_marginHorizontal="4dp"
+                        android:layout_marginHorizontal="5dp"
                         android:layout_weight="1"
                         android:background="@drawable/radio_selector"
                         android:button="@android:color/transparent"
@@ -51,10 +52,10 @@
 
                     <RadioButton
                         android:id="@+id/boardButton"
-                        android:layout_width="30dp"
+                        android:layout_width="20dp"
                         android:layout_height="match_parent"
                         android:layout_marginVertical="10dp"
-                        android:layout_marginHorizontal="4dp"
+                        android:layout_marginHorizontal="5dp"
                         android:layout_weight="1"
                         android:background="@drawable/radio_selector"
                         android:button="@android:color/transparent"
@@ -66,10 +67,10 @@
 
                     <RadioButton
                         android:id="@+id/qnaButton"
-                        android:layout_width="30dp"
+                        android:layout_width="20dp"
                         android:layout_height="match_parent"
                         android:layout_marginVertical="10dp"
-                        android:layout_marginHorizontal="4dp"
+                        android:layout_marginHorizontal="5dp"
                         android:layout_weight="1"
                         android:background="@drawable/radio_selector"
                         android:button="@android:color/transparent"
@@ -81,10 +82,10 @@
 
                     <RadioButton
                         android:id="@+id/letterButton"
-                        android:layout_width="30dp"
+                        android:layout_width="20dp"
                         android:layout_height="match_parent"
                         android:layout_marginVertical="10dp"
-                        android:layout_marginHorizontal="4dp"
+                        android:layout_marginHorizontal="5dp"
                         android:layout_weight="1"
                         android:background="@drawable/radio_selector"
                         android:button="@android:color/transparent"
