FE_221116_font: 홈 UI 최종 수정 완료, font 적용 완료
Former-commit-id: 994bdf7247ba69e58a73b916e3566341332a186f

--- a/android/app/src/main/res/values/styles.xml
+++ b/android/app/src/main/res/values/styles.xml
@@ -50,8 +50,10 @@
     </style>
     <style name="tab_text" parent="@android:style/TextAppearance.Widget.TabWidget">
         <item name="android:fontFamily">@font/one_mobile_pop</item>
+        <item name="android:textSize">16sp</item>
     </style>
     <style name="toolbar_title" parent="@android:style/Widget.Toolbar">
-        <item name="android:fontFamily">@font/onemobilebold</item>
+        <item name="android:fontFamily">@font/one_mobile_pop</item>
+        <item name="android:textSize">16sp</item>
     </style>
 </resources>
