--- a/android/app/src/main/res/layout/fragment_home.xml
+++ b/android/app/src/main/res/layout/fragment_home.xml
@@ -22,28 +22,28 @@
             android:overScrollMode="always"
             tools:context=".HomeFragment">
 
-            <TextView
-                android:id="@+id/topText"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="15dp"
-                android:fontFamily="@font/one_mobile_pop"
-                android:gravity="center_horizontal"
-                android:text="@string/home_logo"
-                android:textColor="@color/black"
-                android:textSize="30sp"
-                app:layout_constraintTop_toTopOf="parent" />
+            <ImageView
+                android:id="@+id/topLogo"
+                android:layout_width="60dp"
+                android:layout_height="60dp"
+                android:elevation="15dp"
+                android:outlineProvider="none"
+                android:src="@drawable/zip"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"></ImageView>
 
             <TextView
                 android:id="@+id/familyName"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:paddingVertical="10dp"
+                android:paddingBottom="8dp"
                 android:fontFamily="@font/one_mobile_pop"
                 android:gravity="center_horizontal"
                 android:text="@{viewmodel.familyData.familyName}"
-                android:textSize="20sp"
-                app:layout_constraintTop_toBottomOf="@+id/topText" />
+                android:textSize="21dp"
+                app:layout_constraintTop_toBottomOf="@id/topLogo" />
+
 
             <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/home_house"
@@ -222,7 +222,7 @@
                     android:paddingVertical="15dp"
                     android:text="@string/mission_top"
                     android:textColor="@color/white"
-                    android:textSize="20sp"
+                    android:textSize="21dp"
                     app:layout_constraintBottom_toTopOf="@id/mission1"
                     app:layout_constraintEnd_toEndOf="@id/home_mission"
                     app:layout_constraintStart_toStartOf="@id/home_mission"
@@ -266,6 +266,7 @@
                     android:outlineProvider="none"
                     android:text="@string/mission1_title"
                     android:textStyle="bold"
+                    android:textSize="16dp"
                     app:layout_constraintBottom_toTopOf="@id/mission1_content"
                     app:layout_constraintEnd_toStartOf="@id/mission1_btn"
                     app:layout_constraintStart_toEndOf="@id/mission1_point"
@@ -296,6 +297,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
                     android:elevation="15dp"
+                    android:textSize="14dp"
                     android:outlineProvider="none"
                     android:text="@string/mission1_content"
                     app:layout_constraintBottom_toTopOf="@+id/mission1_progress"
@@ -353,6 +355,7 @@
                     android:outlineProvider="none"
                     android:text="@string/mission2_title"
                     android:textStyle="bold"
+                    android:textSize="16dp"
                     app:layout_constraintBottom_toTopOf="@id/mission2_content"
                     app:layout_constraintEnd_toStartOf="@id/mission2_btn"
                     app:layout_constraintStart_toEndOf="@id/mission2_point"
@@ -383,6 +386,7 @@
                     android:layout_marginTop="8dp"
                     android:layout_marginBottom="8dp"
                     android:elevation="15dp"
+                    android:textSize="14dp"
                     android:outlineProvider="none"
                     android:text="@string/mission2_content"
                     app:layout_constraintBottom_toTopOf="@id/mission2_progress"
